--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,24 @@
+ *{
+  margin: 0;
+  padding:0; 
+  box-sizing:border-box;
+  
+ }
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  body {
+
     background-color: hsl(185, 75%, 39%);
     font-family: sans-serif;
     font-size: 1.3rem;
     overflow: hidden;
+    height: 100vh;
+    width: 100vw;
   }
   
   .bg-image {
